*******************************************************************************
Changes
*******************************************************************************

Release 0.2.0
===============================================================================

**Major Changes**:


  * Modules are reorganized.

**New Features**:

  * :class:`prody.select.Select` can not identify intermolecular contacts. See
    :ref:`contacts` for an example



Release 0.1.2
===============================================================================

* Important bugfixes and improvements in NMA helper and plotting functions.
* Documentation updates and improvements.


Release 0.1.1
===============================================================================

* Important bugfixes and improvements in chain comparison functions.
* Bugfixes.
* Source clean up.
* Documentation improvements.